# qlab

./: .gitignore  LICENSE  README.md  pyproject.toml
data/crypto/: README.md
data/crypto/caches/: coinglass_12h_cache.pkl  coinglass_4h_cache.pkl  coinglass_6h_cache.pkl  coinglass_daily_cache.pkl  coinglass_v4_12h_cache.pkl  coinglass_v4_1d_cache.pkl  coinglass_v4_4h_cache.pkl  coinglass_v4_6h_cache.pkl  coinglass_v4_global_cache.pkl  coinglass_v4_snapshots.pkl  new_endpoints_1d_cache.pkl  new_endpoints_global_cache.pkl  taker_1d_cache.pkl  taker_4h_cache.pkl
data/crypto/manifests/: coinglass_cache_summary.csv  coinglass_v4_cache_summary.csv  crypto_15m_cache_summary.csv
data/crypto/raw_history/v4_global/: cgdi.csv  etf_btc.csv  etf_eth.csv  fear_greed.csv  stablecoin_mcap.csv
data/crypto/raw_history/v4_snapshots/: ADA_oi_exchange.csv  AVAX_oi_exchange.csv  BNB_oi_exchange.csv  BTC_oi_exchange.csv  BTC_option_maxpain.csv  DOGE_oi_exchange.csv  ETH_oi_exchange.csv  (+7 more)
docs/: crypto_data_root.md
qlab/: __init__.py  cost.py  diagnostics.py  metrics.py  signal.py  spread.py  walkforward.py
qlab/backtest/: __init__.py  signal_bt.py  spread_bt.py
qlab/data/: __init__.py
qlab/data/crypto/: __init__.py  paths.py  raw_history_store.py  refresh_binance_15m_cache.py  refresh_coinglass_timeframe_caches.py  refresh_coinglass_v4_accessible_caches.py  symbol_universe.py
tests/: test_cost.py  test_crypto_paths.py  test_diagnostics.py  test_live_position_timing.py  test_metrics.py  test_signal.py  test_signal_bt.py  test_spread.py  test_spread_bt.py  test_walkforward.py
(+636 files in other folders)
