[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qlab"
version = "0.1.0"
description = "Quantitative research infrastructure — reliable metrics, walk-forward, and backtesting."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
full = ["statsmodels>=0.14"]
dev = ["pytest>=7.0", "statsmodels>=0.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
